Mon Nov 25 04:16:09 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change terminlogy "..._num" to "..._slots" about slot opetaion.
	  * final_num -> final_slots
	  * objspace_live_num() -> objspace_live_slots()
	  * objspace_limit_num() -> objspace_limit_slots()
	  * objspace_free_num() -> objspace_free_slots()

Mon Nov 25 04:03:12 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): add internal information.
	  * heap_swept_slot
	  * malloc_increase
	  * malloc_limit
	  * remembered_shady_object
	  * remembered_shady_object_limit
	  * old_object
	  * old_object_limit
	  * oldmalloc_increase
	  * oldmalloc_limit

	* gc.c (gc_stat): rename names.
	  * heap_live_num -> heap_live_slot
	  * heap_free_num -> heap_free_slot
	  * heap_final_slot -> heap_final_slot

	  Quote from RDoc of GC.stat():
	    "The contents of the hash are implementation specific and may
	    be changed in the future."

	* test/ruby/test_gc.rb: catch up this change.

Mon Nov 25 03:59:45 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: catch up last commit.
	  Now RUBY_GC_OLDSPACE_LIMIT(...) is RUBY_GC_OLDMALLOC_LIMIT(...).

Mon Nov 25 03:10:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change terminology OLDSPACE -> OLDMALLOC.
	  (oldspace -> oldmalloc for variable names)

	  OLDSPACE is confusing because it is not includes slots.
	  To more clearly, rename such as (oldspace_limit -> oldmalloc_limit).
	  It is clear that it measures (estimates) malloc()'ed size.

Mon Nov 25 00:50:03 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* internal.h: use __builtin_bswap16() if possible.

	* configure.in: check existence of __builtin_bswap16().

Sun Nov 24 22:24:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigxor_int): Apply BIGLO for long in a BDIGIT expression.
	  (bigor_int): Ditto.
	  (bigand_int): Ditto.

Sun Nov 24 18:13:23 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h (SIZEOF_ACTUAL_BDIGIT): Defined.
